# raxe-ce

./: .coveragerc  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .pypirc.example  .raxeignore  .raxeignore.example  ACTUAL_BUG_REPORT.md  AGENTS.md  AGGRESSIVE_CLEANUP_PLAN.md  ARCHITECTURE_DIAGRAM.txt  ARCHITECTURE_MAP.md  ASYNC_IMPLEMENTATION_ROADMAP.md  ASYNC_SCAN_ARCHITECTURE.md  BLOCKING_BEHAVIOR_ANALYSIS.md  BUNDLE_REMOVAL_TECHNICAL_SPEC.md  CHANGELOG.md  CLAUDE.md  CLAUDE_HISTORY.md  CLI_FIXES_CHECKLIST.md  CLI_TECHNICAL_AUDIT.md  CLI_USER_FLOWS.md  CODEBASE_EXPLORATION_SUMMARY.md  CODE_OF_CONDUCT.md  CODE_QUALITY_REPORT.md  CONTRIBUTING.md  CONTRIBUTING_RULES.md  DEAD_CODE_ANALYSIS_REPORT.md  DECORATOR_BLOCKING_GUIDE.md  DOCUMENTATION_SUMMARY.md  Dockerfile  EAGER_L2_INTEGRATION.md  EXPLAINABILITY_COMPLETION_REPORT.md  EXPLAINABILITY_EXAMPLE_OUTPUT.txt  EXPLAINABILITY_GUIDE.md  EXPLAINABILITY_IMPLEMENTATION_SUMMARY.md  FAQ.md  FINAL_DELIVERY_SUMMARY.md  (+114 more)
.github/: RULE_SUBMISSION.md  codeql-config.yml  dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: benchmark.yml  build-wheels.yml  codeql.yml  deploy-docs.yml  docker.yml  raxe-scan.yml  release.yml  semantic-release.yml  stale.yml  test-integrations.yml  test.yml  validate-rule-submission.yml
.gitlab/ci-templates/: raxe-scan.yml
CLAUDE_WORKING_FILES/: todo.md
CLAUDE_WORKING_FILES/REPORTS/: repository_structure_setup.md
benchmarks/: benchmark_onnx_loading.py
big_test_data/: EXECUTIVE_SUMMARY.md  FP_ANALYSIS_AND_REMEDIATION.md  ML_TEAM_CSV_HANDOFF.md  ML_TEAM_HANDOFF.md  ML_TEAM_OPTIMAL_HANDOFF.md  ML_TRAINING_RECOMMENDATION.md  STRATEGY_COMPARISON.txt  all_models_comparison.json  benign_test_results.json  compare_all_models.py  compare_models.py  generate_augmented_data.py  generate_optimal_reinforced_data.py  generate_reinforced_training_csv.py  ml_training_analysis.py  ml_training_analysis_report.json  model_comparison_results.json  reinforced_training_data.csv  test_benign_prompts.py
data/l2_training/: README.md  advanced_threats_dataset.json  threat_taxonomy_v2.md
data/l2_training_100k/: README.md  SAMPLE_BREAKDOWN.md  SAMPLE_DATA.jsonl  metadata.json
data/l2_training_200k/: INCREMENTAL_TRAINING.md  README.md  SAMPLE_DATA.jsonl  metadata.json
docs/: AGENT_SECURITY.md  AUTH_DECISION_GUIDE.md  BRAND_ASSETS_OPTIMIZATION.md  BRAND_STYLE_GUIDE.md  CHEAT_SHEET.md  CLI_AUTH.md  CUSTOM_RULES.md  DATA_RETENTION.md  DEBUG_GUIDE.md  ERROR_CODES.md  JSON_RPC_API.md  MCP_INTEGRATION_GUIDE.md  MIGRATION_PUBLIC_API.md  MODEL_BUNDLE_INTEGRATION.md  MSSP_INTEGRATION_GUIDE.md  MULTI_TENANT.md  ONNX_MODEL_LOADING.md  ONNX_ONLY_DETECTOR_GUIDE.md  PACKAGING_GUIDE.md  PERFORMANCE_TUNING.md  PII_EXTRACTION_RULES_DOCUMENTATION.md  POLICIES.md  README.md  RELEASE_PROCESS.md  SCAN_TELEMETRY_SCHEMA.md  STYLE_GUIDE.md  SUPPRESSIONS.md  TESTING_OPTIMIZATION.md  THREAT_MODELING.md  VALIDATION-SUMMARY.md  VOTING_ENGINE.md  analytics_quickstart.md  api_reference.md  architecture.md  async-guide.md  authentication.md  benchmarks.md  cli-json-output-fix.md  cli-reference.md  configuration.md  (+15 more)
docs/api/: README.md  exceptions.md  layer-control.md  raxe-client.md  scan-results.md
docs/archive/: CLEANUP_CHECKLIST.md  CLEANUP_SUMMARY.md  FP_ANALYSIS_ENHANCEMENT_COMPLETE.md
docs/content/: CLI_HELP_TEXT_PROPOSAL.md
docs/design/: progress-indicators-implementation.md  progress-indicators-mockups.md  progress-indicators-quick-ref.md  progress-indicators-spec.md  progress-indicators-summary.md
docs/examples/: anthropic-integration.md  basic-usage.md  openai-integration.md  vertexai-integration.md
docs/integrations/: AUTOGEN.md  CREWAI.md  DSPY.md  HUGGINGFACE.md  LANGCHAIN.md  LITELLM.md  LLAMAINDEX_INTEGRATION.md  OPENCLAW.md  PORTKEY.md  ci-cd.md
docs/performance/: benchmarking.md  tuning_guide.md
docs/plugins/: api_reference.md  plugin_development_guide.md
docs/release-validation/: acceptance-criteria.md  release-checklist.md  test-data-specifications.yaml  user-journey-scenarios.md
docs/releases/: MSSP_PARTNER_ECOSYSTEM_CHANGES.md  MSSP_QA_TESTING_GUIDE.md  v0.13.0-release-notes.md
docs/telemetry/: api.md  events.md
docs/testing/: FRESH_INSTALL_TEST_GUIDE.md  MULTI_TENANT_TESTING.md  (+5 more)
examples/: README.md  async_parallel_scan_demo.py  async_usage.py  basic_scan.py  bundle_detector_example.py  cli_usage.md  config-with-scoring.yaml  decorator_blocking_examples.py  decorator_pattern.py  decorator_usage.py  domain_analytics_demo.py  langchain_guard.py  layer_control_usage.py  litellm_callback.py  monitoring_setup.md  openai_wrapper.py
game-raxe-arena/: DEPLOYMENT_GUIDE.md  README.md  index.html  leaderboard-test.html  playground.html
schemas/: MIGRATION_PLAN.md  README.md  SCHEMA_IMPLEMENTATION_SUMMARY.md
scripts/: README.md  add_rule_examples.py  add_rule_examples_v2.py  add_test_markers.py  analyze_fp_thresholds.py  analyze_full_benign_dataset.py  benchmark.py  benchmark_install.sh  build_rule_cache.py  bump_version.py  check_architecture_violations.py  cleanup_cache.sh  cleanup_for_public.sh  convert_to_onnx.py  create_augmented_benign.py  create_phase1_phase2_augmentation.py  deduplicate_benign_dataset.py  extract_rule_examples.py  fix_empty_mitre_attack.py  fix_pii_examples.py  generate_comprehensive_golden_files.py  generate_golden_files.py  generate_l2_prompt_injection_dataset_100k.py  measure_memory.py  prepare_l2_training_data.py  prepare_l2_training_data_enhanced.py  prepare_l2_training_data_final.py  run_benchmarks.py  seed_data.py  setup_openclaw_test.sh  test_benign_dataset.py  test_cli_output.py  test_enhanced_model.py  test_enhanced_model_comprehensive.py  test_l2_detector.py  test_malicious_dataset.py  test_overfitting.py  test_production_l2_integration.py  test_v1.2_comprehensive.py  train_l2_enhanced_model.py  (+7 more)
tests/: TEST_SUITE_REPORT.md  __init__.py  conftest.py  test_folder_detector.py  test_scoring_config_integration.py  test_structure.py  test_suppression_system.py
(+5129 files in other folders)
